--- a/public/presentations.html
+++ b/public/presentations.html
@@ -5,6 +5,12 @@
 <head>
     <meta charset="utf-8" />
     <title>React Tutorial</title>
+
+    <!-- Bootstrap core CSS -->
+    <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <!-- Bootstrap theme -->
+    <link href="bootstrap/css/bootstrap-theme.min.css" rel="stylesheet">
+
     <script src="react/react.js"></script>
     <script src="react/react-dom.js"></script>
     <script src="https://npmcdn.com/babel-core@5.8.38/browser.min.js"></script>
@@ -52,7 +58,7 @@
       });
       return (
         <div className="presentationList">
-            <table>
+            <table class="table">
                 <thead>
                     <tr>
                         <th>#</th>
