--- a/public/index.html
+++ b/public/index.html
@@ -2,9 +2,13 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>Hello World</title>
-    <script src="build/react.js"></script>
-    <script src="build/react-dom.js"></script>
+    <!-- Bootstrap core CSS -->
+    <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <!-- Bootstrap theme -->
+    <link href="bootstrap/css/bootstrap-theme.min.css" rel="stylesheet">
+
+    <script src="react/react.js"></script>
+    <script src="react/react-dom.js"></script>
     <script src="https://npmcdn.com/babel-core@5.8.38/browser.min.js"></script>
     <script src="https://npmcdn.com/jquery@3.1.0/dist/jquery.min.js"></script>
     <script src="https://npmcdn.com/remarkable@1.6.2/dist/remarkable.min.js"></script>
@@ -13,6 +17,5 @@
 </head>
 <body>
     <div id="app"></div>
-    <div id="delete"></div>
 </body>
 </html>
