Single site upvote in progress.

--- a/public/presentation.html
+++ b/public/presentation.html
@@ -45,12 +45,41 @@
       });
     },
 
+    upvote() {
+      $.ajax({
+        url: '/presentation/' + getParameterByName("key") + '/upvote',
+        dataType: 'text',
+        cache: false,
+        success: function(data) {
+          this.updateState()
+        }.bind(this),
+        error: function(xhr, status, err) {
+          console.error(this.props.url, status, err.toString());
+        }.bind(this)
+      });
+    },
+
+    downvote() {
+      $.ajax({
+        url: '/presentation/' + getParameterByName("key") + '/downvote',
+        dataType: 'text',
+        cache: false,
+        success: function(data) {
+          this.updateState()
+        }.bind(this),
+        error: function(xhr, status, err) {
+          console.error(this.props.url, status, err.toString());
+        }.bind(this)
+      });
+    },
+
     getInitialState: function() {
       return {data: {}, hasUpvoted: "false"}
     },
 
     componentDidMount: function() {
       this.updateState()
+      setInterval(this.updateState, 2000);
     },
 
     render: function() {
@@ -59,7 +88,7 @@
             <div className="container theme-showcase">
                 <h1>{this.state.data.Title}</h1>
                 <h2>{this.state.data.Speaker}</h2>
-                <h4>Votes: {this.state.data.Votes} <a href={"/presentation/" + this.state.data.Key + "/upvote"} className={this.state.hasUpvoted == "false" ? "btn btn-success" : "btn btn-danger"} role="button">{this.state.hasUpvoted == "false" ? "Upvote" : "btn btn-danger"}</a></h4>
+                <h4>Votes: {this.state.data.Votes} <button onClick={(this.state.hasUpvoted == "false" ? this.upvote : this.downvote)} className={this.state.hasUpvoted == "false" ? "btn btn-info" : "btn btn-success"}>{this.state.hasUpvoted == "false" ? "Upvote!" : "Undo upvote."}</button></h4>
                 <div className="well">{this.state.data.Description}</div>
             </div>
           </div>
