--- a/public/presentation.html
+++ b/public/presentation.html
@@ -18,7 +18,6 @@
 <body>
 <div id="content"></div>
 <script type="text/babel">
-
   var PresentationList = React.createClass({
     updateState() {
       $.ajax({
@@ -38,6 +37,17 @@
         cache: false,
         success: function(data) {
           this.setState({hasUpvoted: data});
+        }.bind(this),
+        error: function(xhr, status, err) {
+          console.error(this.props.url, status, err.toString());
+        }.bind(this)
+      });
+      $.ajax({
+        url: '/isLoggedIn',
+        dataType: 'text',
+        cache: false,
+        success: function(data) {
+          this.setState({isLoggedIn: data});
         }.bind(this),
         error: function(xhr, status, err) {
           console.error(this.props.url, status, err.toString());
@@ -73,8 +83,12 @@
       });
     },
 
+    login() {
+        window.open("/_ah/login?continue=" + window.location.href,"_self")
+    },
+
     getInitialState: function() {
-      return {data: {}, hasUpvoted: "false"}
+      return {data: {}, hasUpvoted: "false", isLoggedIn: "false"}
     },
 
     componentDidMount: function() {
@@ -88,7 +102,7 @@
             <div className="container theme-showcase">
                 <h1>{this.state.data.Title}</h1>
                 <h2>{this.state.data.Speaker}</h2>
-                <h4>Votes: {this.state.data.Votes} <button onClick={(this.state.hasUpvoted == "false" ? this.upvote : this.downvote)} className={this.state.hasUpvoted == "false" ? "btn btn-info" : "btn btn-success"}>{this.state.hasUpvoted == "false" ? "Upvote!" : "Undo upvote."}</button></h4>
+                <h4>Votes: {this.state.data.Votes} <button onClick={this.state.isLoggedIn == "true" ? (this.state.hasUpvoted == "false" ? this.upvote : this.downvote) : this.login} className={this.state.hasUpvoted == "false" ? "btn btn-info" : "btn btn-success"}>{this.state.hasUpvoted == "false" ? "Upvote!" : "Undo upvote."}</button></h4>
                 <div className="well">{this.state.data.Description}</div>
             </div>
           </div>
