--- a/public/html/presentations.html
+++ b/public/html/presentations.html
@@ -5,11 +5,11 @@
     <meta charset="utf-8" />
     <title>React Tutorial</title>
 
-    <link href="../bootstrap/css/bootstrap.min.css" rel="stylesheet">
-    <link href="../bootstrap/css/bootstrap-theme.min.css" rel="stylesheet">
+    <link href="../dependencies/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link href="../dependencies/bootstrap/css/bootstrap-theme.min.css" rel="stylesheet">
 
-    <script src="../react/react.js"></script>
-    <script src="../react/react-dom.js"></script>
+    <script src="../dependencies/react/react.js"></script>
+    <script src="../dependencies/react/react-dom.js"></script>
     <script src="https://npmcdn.com/babel-core@5.8.38/browser.min.js"></script>
     <script src="https://npmcdn.com/jquery@3.1.0/dist/jquery.min.js"></script>
     <script src="https://npmcdn.com/remarkable@1.6.2/dist/remarkable.min.js"></script>
