--- a/public/index.html
+++ b/public/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Hello World</title>
+    <title>Simple React Application</title>
 </head>
 <body>
-<div> Hello World!!! </div>
+<div id='component'></div>
 </body>
 </html>
