--- a/public/index.html
+++ b/public/index.html
@@ -1,15 +1,1 @@
-index.html
-
-<html>
-  <head>
-    <title>MeetupRest</title>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- 1. Load libraries -->
-     <!-- Polyfill(s) for older browsers -->
-  </head>
-  <!-- 3. Display the application -->
-  <body>
-    <my-app>Loading...</my-app>
-  </body>
-</html>
+index.html <html> <head> <title>MeetupRest</title> <meta charset=UTF-8> <meta name=viewport content="width=device-width,initial-scale=1"> </head> <body> <my-app>Loading...</my-app> <script type="text/javascript" src="/public/app.f23a9bac068fc68e2f16.js"></script></body> </html>
