--- a/public/index.html
+++ b/public/index.html
@@ -3,8 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <title>Simple React Application</title>
+    <script src="./node_modules/react/dist/react-with-addons.js"></script>
+
 </head>
 <body>
-<div id='component'></div>
+<div id='app'></div>
+<script src="bundle.js" type="text/javascript"></script>
+
+
 </body>
 </html>
