--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Simple React Application</title>
     <script src="./node_modules/react/dist/react-with-addons.js"></script>
-
+    <script src="https://npmcdn.com/jquery@3.1.0/dist/jquery.min.js"></script>
 </head>
 <body>
 <div id='app'></div>
