--- a/public/index.html
+++ b/public/index.html
@@ -5,11 +5,12 @@
     <title>Simple React Application</title>
     <script src="./node_modules/react/dist/react-with-addons.js"></script>
     <script src="https://npmcdn.com/jquery@3.1.0/dist/jquery.min.js"></script>
+    <link rel="stylesheet" href="app.css">
+    <link href='http://fonts.googleapis.com/css?family=Roboto:300,100,700' rel='stylesheet' type='text/css'>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyByTOp78icwH2oRmfcC9zTarst10suM42I&libraries=places"></script>
 </head>
 <body>
 <div id='app'></div>
 <script src="bundle.js" type="text/javascript"></script>
-
-
 </body>
 </html>
